--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ num-derive = "0.3"
 num-traits = "0.2"
 realsense-sys = {version = "0.3.0", path = "realsense-sys"}
 safe-transmute = "0.11"
+thiserror = "1.0"
 
 [dev-dependencies]
 anyhow = "1.0"
