--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/jerry73204/realsense-rust"
 version = "0.5.0"
 
 [dependencies]
+anyhow = "1.0"
 futures = "0.3"
 image = {version = "0.23", optional = true}
 nalgebra = {version = "0.24", optional = true}
