Change default features to none

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,13 @@ name = "realsense-rust"
 repository = "https://github.com/jerry73204/realsense-rust"
 version = "0.5.0"
 
+[features]
+default = []
+buildtime-bindgen = ["realsense-sys/buildtime-bindgen"]
+device-test = ["with-image"]
+with-image = ["image"]
+with-nalgebra = ["nalgebra"]
+
 [dependencies]
 anyhow = "1.0"
 futures = "0.3"
@@ -26,10 +33,3 @@ crossbeam = "0.8"
 kiss3d = "0.29"
 lazy_static = "1.4"
 tokio = {version = "1.1", features = ["rt-multi-thread", "macros"]}
-
-[features]
-buildtime-bindgen = ["realsense-sys/buildtime-bindgen"]
-default = ["with-nalgebra", "with-image"]
-device-test = ["with-image"]
-with-image = ["image"]
-with-nalgebra = ["nalgebra"]
