Add container image to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 # CONFIGURATION
+image: 'registry.gitlab.com/tangram-vision-oss/realsense-rust/ci:latest'
 
 stages:
   - doc
@@ -13,20 +14,20 @@ before_script:
 # - [PASS REQ] runs all unit tests in the build
 # - [PASS REQ] runs a lint checker over every piece of code
 
-# test:
-#   stage: test
-#   script:
-#     - rustc --version
-#     - cargo --version
-#     - cargo test --verbose
-#
-# lint:
-#   stage: test
-#   script:
-#     - rustc --version
-#     - cargo --version
-#     - cargo clippy --all-targets --all-features -- -D warnings
-#
+test:
+  stage: test
+  script:
+    - rustc --version
+    - cargo --version
+#    - cargo test --verbose
+
+lint:
+  stage: test
+  script:
+    - rustc --version
+    - cargo --version
+    - cargo clippy --all-targets --all-features -- -D warnings
+
 
 ##### ########## ########## ########## ########## #####
 # DOC STAGE
