Update Cargo.toml to include 0.5.1 entries / changes

--- a/realsense-sys/Cargo.toml
+++ b/realsense-sys/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
-authors = ["jerry73204 <jerry73204@gmail.com>", "Brandon Minor <brandon@tangramvision.com>"]
+authors = ["jerry73204 <jerry73204@gmail.com>", "Jeremy Steward <jeremy.steward@tangramvision.com>", "Brandon Minor <brandon@tangramvision.com>"]
+categories = ["external-ffi-bindings", "computer-vision", "hardware-support"]
 description = "Rust abstraction layer for the RealSense SDK C library"
 documentation = "https://docs.rs/realsense-sys/"
 edition = "2018"
-homepage = "https://github.com/Tangram-Vision/realsense-rust"
+homepage = "https://gitlab.com/tangram-vision-oss/realsense-rust"
+keywords = ["Intel", "RealSense", "Sensor", "Robotics"]
 license = "Apache-2.0"
 name = "realsense-sys"
-repository = "https://github.com/Tangram-Vision/realsense-rust"
+readme = "README.md"
+repository = "https://gitlab.com/tangram-vision-oss/realsense-rust"
 version = "0.3.0"
 
 [features]
