Add cargo test and clippy to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,14 +23,14 @@ test:
   script:
     - rustc --version
     - cargo --version
-#    - cargo test --verbose
+    - cargo test --verbose
 
 lint:
   stage: test
   script:
     - rustc --version
     - cargo --version
-#    - cargo clippy --all-targets --all-features -- -D warnings
+    - cargo clippy --all-targets --all-features -- -D warnings
 
 
 ##### ########## ########## ########## ########## #####
