Ensure buildtime-bindgen is enabled for all CI build phases
- If CI has an older version of librealsense2 installed than your local
system, this will probably break the build loudly until we update it,
assuming that you've added fields / APIs to the crate based on the
latest version.

- If CI has a newer version of librealsense2 installed than we do, this
will probably break if we do not incorporate all enum variants in the
latest librealsense version.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ test:
   script:
     - rustc --version
     - cargo --version
-    - cargo test --verbose
+    - cargo test --features buildtime-bindgen --verbose
 
 lint:
   stage: test
