Correct simplified build script for cross-platform compilation
This work was also done on the original repository started by @jerry73204,
contributed by user @de-vri-es. It was an attempt at simplifying the build
script and potentially bypassing pkg-config when not needed. However, the
rsutils helper compliation step was broken, as was the logic for finding the
header when building outside of realsense-sys. These have been corrected, and
this build script is working pretty well for Windows.

--- a/realsense-sys/Cargo.toml
+++ b/realsense-sys/Cargo.toml
@@ -31,7 +31,6 @@ buildtime-bindgen = ["bindgen"]
 # None required. However, access to the RealSense library is necessary.
 
 [build-dependencies]
-anyhow = "1.0"
 bindgen = { version = "0.57", optional = true }
-lazy_static = "1.4"
 pkg-config = { version = "0.3" }
+cc = { version = "1.0", features = ["parallel"] }
