--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ authors = [
     "jerry73204 <jerry73204@gmail.com>",
     "Jeremy Steward <jeremy.steward@tangramvision.com>",
     "Brandon Minor <brandon@tangramvision.com>",
+    "Paul Jakob Schroeder <paul.schroeder@tangramvision.com>",
 ]
 categories = ["external-ffi-bindings", "computer-vision", "hardware-support"]
 description = "High-level RealSense library in Rust"
@@ -32,3 +33,6 @@ num-derive = "0.3"
 num-traits = "0.2"
 realsense-sys = { version = "2.47.0", path = "realsense-sys" }
 thiserror = "1.0"
+
+[dev-dependencies]
+opencv = "0.53"
