--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,6 @@ num-traits = "0.2"
 realsense-sys = { version = "2.47.0", path = "realsense-sys" }
 thiserror = "1.0"
 
-[dev-dependencies]
-opencv = "0.53"
+[dev-dependencies.opencv]
+version = "0.53"
+features = ["clang-runtime"]
