Update CI script for release/1.0 branch
Couple of changes here:

1. We now use the 0.4.0 version of the CI image, which has
librealsense2.44.0

2. We avoid using `--all-features` since we want to avoid using
`docs-only` except when generating docs.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ lint:
   script:
     - rustc --version
     - cargo --version
-    - cargo clippy --all-targets --all-features -- -D warnings
+    - cargo clippy --all-targets --features=buildtime-bindgen,test-single-device -- -D warnings
 
 
 ##### ########## ########## ########## ########## #####
@@ -38,7 +38,7 @@ lint:
 doc-check:
   stage: doc
   script:
-    - cargo clippy --all-targets --all-features -- -A clippy::all -D clippy::missing_docs_in_private_items
+    - cargo clippy --all-targets --features docs-only -- -A clippy::all -D clippy::missing_docs_in_private_items
   allow_failure: true
 
 build_badges:
