--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 # CONFIGURATION
 default:
-  image: 'registry.gitlab.com/tangram-vision-oss/realsense-rust/ci:latest'
+  image: "registry.gitlab.com/tangram-vision/oss/ci-oss/public-ci:latest"
   before_script:
     # Update rust in case the latest version isn't built into our docker image.
     - rustup update stable
