--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ docs-only = ["realsense-sys/docs-only"]
 anyhow = "1.0"
 num-derive = "0.3"
 num-traits = "0.2"
-realsense-sys = { version = "2.54.2-1", path = "realsense-sys" }
+realsense-sys = { version = "=2.54.2-1", path = "realsense-sys" }
 thiserror = "1.0"
 
 [dev-dependencies]
